syntax = "proto3";

package xdsserver;

// import "google/api/annotations.proto";
// import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/jparklab/xds-test-server/pkg/generated/config";

enum CommandType {
    COMMAND_ADD_SERVICE = 0;
    COMMAND_REMOVE_SERVICE = 1;
    COMMAND_SET_OPTION = 2;
}

message AddServiceCommand {
    string service_name = 1;
}

message RemoveServiceCommand {
    string service_name = 1;
}

message SetOptionCommand {
    string key = 1;
    oneof value {
        string string_value = 2;
        int64 int64_value = 3;
        bool bool_value = 4;
    }
}

message Command {
    CommandType type = 1;
    oneof command {
        AddServiceCommand add_service = 2;
        RemoveServiceCommand remove_service = 3;
        SetOptionCommand set_option = 4;
    }
}

service ConfigService {
    rpc SendConfigCommand(Command) returns (google.protobuf.Empty) {}
}